# axinite

./: .coverage  .env.example  .gitignore  .markdownlint-cli2.jsonc  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  COVERAGE_PLAN.md  Cargo.toml  Dockerfile  Dockerfile.test  Dockerfile.worker  FEATURE_PARITY.md  Makefile  README.md  README.zh-CN.md  axinite.bash  axinite.fish  axinite.zsh  build.rs  cssview-chat.json  cssview-jobs.json  cssview-memory.json  cssview-skills.json  docker-compose.yml  dylint.toml  ironclaw.zsh  typos.local.toml  typos.toml
.codescene/: code-health-rules.json
.config/: nextest.toml
.github/: dependabot.yml  pull_request_template.md
channels-src/slack/: Cargo.toml  build.sh  slack.capabilities.json
channels-src/slack/src/: lib.rs
deploy/: axinite.service  cloud-sql-proxy.service  env.example  setup.sh
docs/: BUILDING_CHANNELS.md  LLM_PROVIDERS.md  TELEGRAM_SETUP.md  adr-001-rego-policy-engine-for-intent-enforcement.md  adr-002-authoritative-intent-state-must-remain-human-auditable.md  adr-003-theme-management-belongs-in-memoryd.md  adr-004-dual-path-semantic-extraction-with-validated-provenance.md  adr-005-dual-mode-uncertainty-gating-for-hierarchical-recall.md  adr-006-dual-trait-pattern-for-dyn-backed-async-interfaces.md  adr-007-stable-capability-probes-must-ignore-ambient-rustc-wrapper.md  adr-008-mutation-testing-with-cargo-mutants.md  adr-009-borrowed-newtypes-for-schema-helper-arguments.md  adr-010-consolidate-bootstrap-rename-helpers.md  adr-010-extract-register-wasm-helpers.md  adr-011-extract-register-wasm-helpers.md  adr-012-monotonic-clock-seam-for-build-duration.md  agent-skills-support.md  axinite-architecture-overview.md  chat-model.md  complexity-antipatterns-and-refactoring-strategies.md  configuration-guide.md  contents.md  database-integrations.md  developers-guide.md  documentation-style-guide.md  embedding-integrations.md  formal-verification-methods-in-axinite.md  front-end-architecture.md  jobs-and-routines.md  reliable-testing-in-rust-via-dependency-injection.md  repository-layout.md  repostory-layout.md  roadmap.md  rstest-bdd-users-guide.md  rust-doctest-dry-guide.md  rust-testing-with-rstest-fixtures.md  smart-routing-spec.md  solidjs-frontend.md  solidjs-pwa-gap-analysis.md  testing-abstractions.md  (+11 more)
tests/e2e/: CLAUDE.md  README.md  conftest.py  helpers.py  mock_llm.py  pyproject.toml
tests/e2e/axinite_e2e.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/e2e/scenarios/: test_chat.py  test_connection.py  test_extensions.py  test_html_injection.py  test_skills.py  test_sse_reconnect.py  test_tool_approval.py
tools-src/telegram/: Cargo.toml
tools-src/telegram/patches/grammers-crypto/: Cargo.toml  README.md
tools-src/telegram/patches/grammers-crypto/src/: auth_key.rs  factorize.rs  lib.rs  two_factor_auth.rs
tools-src/telegram/src/: api.rs  lib.rs  session.rs  transport.rs
(+2042 files in other folders)
