[package]
name = "slack-channel"
version = "0.2.2"
edition = "2021"
description = "Slack Events API channel for Axinite"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# WIT bindgen for WASM component model
wit-bindgen = "0.36"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


[profile.release]
# Optimize for size
opt-level = "s"
lto = true
strip = true
codegen-units = 1

[workspace]
