[project]
name = "axinite-e2e"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-playwright>=0.8.0",
    "pytest-timeout>=2.4.0",
    "playwright>=1.61.0",
    "aiohttp>=3.14.1",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
vision = [
    "anthropic>=0.116.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
timeout = 120
