[package]
edition = "2024"
name = "grammers-crypto"
version = "0.9.0"
authors = ["Lonami Exo <totufals@hotmail.com>"]
build = false
autolib = false
autobins = false
autoexamples = false
autotests = false
autobenches = false
description = """
Several cryptographic utilities to work with Telegram's data.
"""
homepage = "https://codeberg.org/Lonami/grammers"
documentation = "https://docs.rs/grammers-crypto"
readme = "README.md"
keywords = [
    "telegram",
    "tl",
]
categories = ["cryptography"]
license = "MIT OR Apache-2.0"
repository = "https://codeberg.org/Lonami/grammers"
resolver = "2"

[workspace]

[lib]
name = "grammers_crypto"
path = "src/lib.rs"

[dependencies.aes]
version = "0.8.4"

[dependencies.ctr]
version = "0.9.2"

[dependencies.getrandom]
version = "0.4.1"

[dependencies.glass_pumpkin]
version = "2.0.0-rc0"

[dependencies.hmac]
version = "0.12.1"

[dependencies.num-bigint]
version = "0.4.6"

[dependencies.num-traits]
version = "0.2.19"

[dependencies.pbkdf2]
version = "0.12.2"

[dependencies.sha1]
version = "0.10.6"

[dependencies.sha2]
version = "0.10.9"
